// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadJsonOrYaml .json 1`] = `
Object {
  "name": "ghc-cli",
  "version": "1.0.11",
}
`;

exports[`loadJsonOrYaml .yaml 1`] = `
Object {
  "name": "ghc-cli",
  "version": "1.0.1",
}
`;

exports[`loadJsonOrYaml .yml 1`] = `
Object {
  "name": "ghc-cli",
  "version": "1.0.1",
}
`;

exports[`loadJsonOrYamlSync .json 1`] = `
Object {
  "name": "ghc-cli",
  "version": "1.0.11",
}
`;

exports[`loadJsonOrYamlSync .yaml 1`] = `
Object {
  "name": "ghc-cli",
  "version": "1.0.1",
}
`;

exports[`loadJsonOrYamlSync .yml 1`] = `
Object {
  "name": "ghc-cli",
  "version": "1.0.1",
}
`;
